syntax = "proto3";

package common.v1;

option java_package = "io.manabie.quarkus.proto.common.v1";
option go_package = "github.com/manabie-com/backend/pkg/manabuf/common/v1;cpb";

enum Country {
  COUNTRY_NONE = 0;
  COUNTRY_MASTER = 1;
  COUNTRY_VN = 2;
  COUNTRY_ID = 3;
  COUNTRY_SG = 4;
  COUNTRY_JP = 5;
}

enum Subject {
  SUBJECT_NONE = 0;
  SUBJECT_MATHS = 1;
  SUBJECT_BIOLOGY = 2;
  SUBJECT_PHYSICS = 3;
  SUBJECT_CHEMISTRY = 4;
  SUBJECT_GEOGRAPHY = 5;
  SUBJECT_ENGLISH = 6;
  SUBJECT_ENGLISH_2 = 7;
  SUBJECT_JAPANESE = 8;
  SUBJECT_SCIENCE = 9;
  SUBJECT_SOCIAL_STUDIES = 10;
  SUBJECT_LITERATURE = 11;
}

// online, offline, hybrid
enum LessonType {
  LESSON_TYPE_NONE = 0;
  LESSON_TYPE_ONLINE = 1;
  LESSON_TYPE_OFFLINE = 2;
  LESSON_TYPE_HYBRID = 3;
}

enum TeachingModel{
  LESSON_TEACHING_MODEL_INDIVIDUAL = 0;
  LESSON_TEACHING_MODEL_GROUP = 1;
}

enum LearningObjectiveType {
  LEARNING_OBJECTIVE_TYPE_NONE = 0;
  LEARNING_OBJECTIVE_TYPE_LEARNING = 1;
  LEARNING_OBJECTIVE_TYPE_FLASH_CARD = 2;
  LEARNING_OBJECTIVE_TYPE_OFFLINE_LEARNING = 3;
  LEARNING_OBJECTIVE_TYPE_EXAM_LO = 4;
}

enum StudentStatus {
  reserved 1 to 3;
  reserved "STUDENT_STATUS_POTENTIAL", "STUDENT_STATUS_ENROLLED", "STUDENT_STATUS_QUIT";
  STUDENT_STATUS_NONE = 0;
}

enum StudentEnrollmentStatus {
  STUDENT_ENROLLMENT_STATUS_NONE = 0;
  STUDENT_ENROLLMENT_STATUS_POTENTIAL = 1;
  STUDENT_ENROLLMENT_STATUS_ENROLLED = 2;
}

enum LessonTeachingMethod{
  LESSON_TEACHING_METHOD_INDIVIDUAL = 0;
  LESSON_TEACHING_METHOD_GROUP = 1;
}

enum LessonTeachingMedium {
  LESSON_TEACHING_MEDIUM_OFFLINE = 0;
  LESSON_TEACHING_MEDIUM_ONLINE = 1;
  LESSON_TEACHING_MEDIUM_HYBRID = 2;
  LESSON_TEACHING_MEDIUM_ZOOM = 3;
}

enum LessonSchedulingStatus{
  LESSON_SCHEDULING_STATUS_DRAFT = 0;
  LESSON_SCHEDULING_STATUS_PUBLISHED = 1;
  LESSON_SCHEDULING_STATUS_COMPLETED = 2;
  LESSON_SCHEDULING_STATUS_CANCELED = 3;
}

enum ImportUserEventStatus{
  IMPORT_USER_EVENT_STATUS_WAITING = 0;
  IMPORT_USER_EVENT_STATUS_FINISHED = 1;
  IMPORT_USER_EVENT_STATUS_FAILED = 2;
}

enum DateOfWeek {
  DATE_OF_WEEK_SUNDAY = 0;
  DATE_OF_WEEK_MONDAY = 1;
  DATE_OF_WEEK_TUESDAY = 2;
  DATE_OF_WEEK_WEDNESDAY = 3;
  DATE_OF_WEEK_THURSDAY = 4;
  DATE_OF_WEEK_FRIDAY = 5;
  DATE_OF_WEEK_SATURDAY = 6;
}

enum AchievementCrown {
  ACHIEVEMENT_CROWN_NONE = 0;
  ACHIEVEMENT_CROWN_BRONZE = 1;
  ACHIEVEMENT_CROWN_SILVER = 2;
  ACHIEVEMENT_CROWN_GOLD = 3;
}

enum Platform {
	PLATFORM_BACKOFFICE = 0;
	PLATFORM_TEACHER = 1;
	PLATFORM_LEARNER = 2;
}

enum StudentAttendStatus {
  STUDENT_ATTEND_STATUS_EMPTY = 0;
  STUDENT_ATTEND_STATUS_ATTEND = 1;
  STUDENT_ATTEND_STATUS_ABSENT = 2;
  STUDENT_ATTEND_STATUS_LATE = 3;
  STUDENT_ATTEND_STATUS_LEAVE_EARLY = 4;
  STUDENT_ATTEND_STATUS_INFORMED_ABSENT = 5;
  STUDENT_ATTEND_STATUS_INFORMED_LATE = 6;
  STUDENT_ATTEND_STATUS_REALLOCATE = 7;
}

enum ValueType {
  VALUE_TYPE_INT = 0;
  VALUE_TYPE_STRING = 1;
  VALUE_TYPE_BOOL = 2;
  //array
  VALUE_TYPE_INT_ARRAY = 3;
  VALUE_TYPE_STRING_ARRAY = 4;
  //set
  VALUE_TYPE_INT_SET = 5;
  VALUE_TYPE_STRING_SET = 6;
  //map
  VALUE_TYPE_STRING_MAP = 7;
  VALUE_TYPE_INT_MAP = 8;
}

enum ExamLOReviewOption {
  EXAM_LO_REVIEW_OPTION_IMMEDIATELY = 0;
  EXAM_LO_REVIEW_OPTION_AFTER_DUE_DATE = 1;
}

enum StudentAttendanceNotice {
  NOTICE_EMPTY = 0;
  IN_ADVANCE = 1;
  ON_THE_DAY = 2;
  NO_CONTACT = 3;
}

enum StudentAttendanceReason {
  REASON_EMPTY = 0;
  PHYSICAL_CONDITION = 1;
  SCHOOL_EVENT = 2;
  FAMILY_REASON = 3;
  REASON_OTHER = 4;
}

enum LearningMaterialVendorType {
  LM_VENDOR_TYPE_NONE = 0;
  LM_VENDOR_TYPE_MANABIE = 1;
  LM_VENDOR_TYPE_LEARNOSITY = 2;
}

enum QuizLabelType {
  QUIZ_LABEL_TYPE_NONE = 0;
  QUIZ_LABEL_TYPE_CUSTOM = 1;
  QUIZ_LABEL_TYPE_NUMBER = 2;
  QUIZ_LABEL_TYPE_TEXT_LOWERCASE = 3;
  QUIZ_LABEL_TYPE_TEXT_UPPERCASE = 4;
  QUIZ_LABEL_TYPE_WITHOUT_LABEL = 5;
}
